tests/reference/asr-dim_assgn_test-4df3c08.stderr
warning: Dimensions are specified twice
 --> tests/errors/dim_assgn_test.f90:3:19
  |
3 | integer, private, dimension(2,2) :: a(2,3)
  |                   ^^^^^^^^^^^^^^    ^^^^^^ help: consider specifying it just one way or the other

semantic error: Variable 'x' is not declared
 --> tests/errors/dim_assgn_test.f90:5:1
  |
5 | x = 5
  | ^ 'x' is undeclared
